--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org"
       xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
-    <title>Spring Security Example </title>
+    <title>Регистрация</title>
 </head>
 <body>
 <div th:if="${param.error}">
@@ -13,10 +13,18 @@
 </div>
 Add new user
 <form th:action="@{/registration}" method="post">
-    <div><label> Login : <input type="text" name="username"/> </label></div>
-    <div><label> Password: <input type="password" name="password"/> </label></div>
-    <div><label> Name: <input type="text" name="name"/> </label></div>
-    <div><label> Surname: <input type="text" name="surname"/> </label></div>
+    <div><label> Login : <input type="text" name="username" required/> </label></div>
+    <div><label> Password: <input type="password" name="password" required/> </label></div>
+    <div><label> Name: <input type="text" name="name" required/> </label></div>
+    <div><label> Surname: <input type="text" name="surname" required/> </label></div>
+    <select type="text" name="specialization" required>
+        <option value="">Выбрать</option>
+        <option value="VOCAL">VOCAL</option>
+        <option value="SOLFEGE">SOLFEGE</option>
+        <option value="GUITAR">GUITAR</option>
+        <option value="PIANO">PIANO</option>
+        <option value="DRUMS">DRUMS</option>
+    </select>
     <div><input type="submit" value="Sign Up"/></div>
 </form>
 </body>
