--- a/src/main/resources/templates/teacher.html
+++ b/src/main/resources/templates/teacher.html
@@ -3,24 +3,39 @@
 <body>
 <div>
     <form th:action="@{/teacher}" method="post">
-        <input type= "text" name="execution" placeholder="Введите время выполнения 'yyyy-MM-dd HH:mm' "/>
-       <!--    <input type="text" name="specialization" placeholder="Введите специализацию"> -->
+        <input type="text" name="execution" placeholder="Введите время выполнения 'yyyy-MM-dd HH:mm' "/>
+        <!--    <input type="text" name="specialization" placeholder="Введите специализацию"> -->
         <button type="submit">Добавить</button>
     </form>
 </div>
 <div>Список занятий</div>
 <table border="1">
     <tr>
+        <th>id</th>
         <th>teacher</th>
         <th>execution</th>
         <th>specialization</th>
         <th>students</th>
     </tr>
     <tr th:each="lesson : ${lessons}">
+
+        <td th:utext="${lesson.id}">id</td>
         <td th:utext="${lesson.teacher}">teacher</td>
         <td th:utext="${lesson.execution}">execution</td>
         <td th:utext="${lesson.specialization}">specialization</td>
         <td th:utext="${lesson.users}">students</td>
+        <td>
+            <form th:action="@{/teacher/delete/{lessonId}(lessonId=${lesson.id})}" method="post">
+                <input type="hidden" name="action" value="delete"/>
+                <button type="submit">Delete</button>
+            </form>
+        </td>
+        <td>
+            <form th:action="@{/teacher/delete/{lessonId}(lessonId=${lesson.id})}" method="post">
+                <input type="hidden" name="action" value="update"/>
+                <button type="submit">Update</button>
+            </form>
+        </td>
 
 </table>
 </body>
