--- a/src/main/resources/templates/student.html
+++ b/src/main/resources/templates/student.html
@@ -5,6 +5,41 @@
     <title>Title</title>
 </head>
 <body>
-<p th:text="'Hello, ' + ${about} + '!'"/>
+<form th:action="@{/student}" method="get">
+    <p th:text="${message}"/>
+</form>
+<div>Список занятий</div>
+<table border="1">
+    <tr>
+        <!--   <th>id</th> -->
+        <th>teacher</th>
+        <th>execution</th>
+        <th>specialization</th>
+        <th>students</th>
+    </tr>
+    <tr th:each="lesson : ${lessons}">
+
+        <!--      <td th:utext="${lesson.id}">id</td> -->
+        <td th:utext="${lesson.teacher}">teacher</td>
+        <td th:utext="${lesson.execution}">execution</td>
+        <td th:utext="${lesson.specialization}">specialization</td>
+        <td th:utext="${lesson.users}">students</td>
+        <td>
+            <form th:action="@{/student/delete/{lessonId}(lessonId=${lesson.id})}" method="post">
+                <input type="hidden" name="action" value="delete"/>
+                <button type="submit">Delete</button>
+
+            </form>
+        </td>
+        <td>
+            <form th:action="@{/student/add/{lessonId}(lessonId=${lesson.id})}" method="post">
+                <input type="hidden" name="action" value="add"/>
+                <button type="submit">add</button>
+            </form>
+        </td>
+
+
+</table>
+
 </body>
 </html>
