--- a/src/main/resources/templates/teacher.html
+++ b/src/main/resources/templates/teacher.html
@@ -11,7 +11,7 @@
 <div>Список занятий</div>
 <table border="1">
     <tr>
-     <!--   <th>id</th> -->
+        <th>id</th>
         <th>teacher</th>
         <th>execution</th>
         <th>specialization</th>
@@ -20,7 +20,7 @@
     </tr>
     <tr th:each="lesson : ${lessons}">
 
-  <!--      <td th:utext="${lesson.id}">id</td> -->
+        <td th:utext="${lesson.id}">id</td>
         <td th:utext="${lesson.teacher}">teacher</td>
         <td th:utext="${lesson.execution}">execution</td>
         <td th:utext="${lesson.specialization}">specialization</td>
