implemented the addition of a personal lesson by the student

--- a/src/main/resources/templates/attendance.html
+++ b/src/main/resources/templates/attendance.html
@@ -19,11 +19,13 @@
 
             <td>
                 <input type="checkbox" name="action" th:value="${student.id}"  />
-                <!--   <input type="hidden" value="${student.id}" name="studentId"> -->
             </td>
 
     </table>
     <button type="submit">Update</button>
 </form>
 </body>
+<footer>
+    <a href="/teacher"> <input type="submit" value="Step Back"/> </a>
+</footer>
 </html>
