--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -9,10 +9,10 @@
 
 Login page
 
-<form th:action="@{/login}" method="post">
+<form id="formLog" th:action="@{/login}" method="post">
     <div><label> User Name : <input type="text" name="username"/> </label></div>
     <div><label> Password: <input type="password" name="password"/> </label></div>
-    <div><input type="submit" value="Sign In" class="button"/></div>
+    <div><input type="submit" value="Sign In" class="button" form="formLog"/></div>
 </form>
 <a href="/registration"> <input type="submit" value="Registration" class="button"/></a>
 </body>
