--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -7,6 +7,9 @@
 </head>
 <body>
 <a href="/main"> <input type="submit" value="To Main" class="button"/> </a>
+<form th:action="@{/chat}" method="get">
+    <input type="submit" value="Chat" class="button"/>
+</form>
 <form th:action="@{/admin}" method="get">
     <p th:text="${about}"></p>
 </form>
